Changed availability status

--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         non-intrusive JavaScript. Oh, and it degradates gracefully.
       </p>
 
-      <p class="status">Not available for hire until March, 2011.</p>
+      <p class="status">
+        Hire me at <a href="http://webleader.pl">webleader.pl</a>
+        
+        <span class="small">
+          (unfortunately Polish only, but there's still contact form below)
+        </span>
+      </p>
 
       <h3>Questions?</h3>
       <form method="post" action="http://sognat.com/send-mail.php">
