--- a/index.html
+++ b/index.html
@@ -18,56 +18,16 @@
         I build rock-solid <span class="what">web applications</span>.
       </h2>
     </div>
+
     <div class="article">
-      <p class="info">
-        I'm co-founder <span class="amp">&amp;</span> programmer at
-        <a href="http://webleader.pl">WebLeader.pl</a> - small agency
-        providing <strong>design</strong> and <strong>development</strong>
-        solutions.
-
-        I&nbsp;<a href="http://github.com/sognat">contribute to OpenSource</a>
-        in my spare time.</p>
-
-      <p>
-        For me, using right tool for the job is essential to deliver modern,
-        standard-compliant solution. I try to complement my toolbox
-        continuously and dig throughout API docs quite often.
-
-        My current stack includes Ruby for most web applications and
-        scripting work. Sometimes PHP, if you ask nicely.
-      </p>
-      <p>
-        Frontend work is done using latest standards including goodies from
-        HTML 5 <span class="amp">&amp;</span> CSS 3 decorated with
-        non-intrusive JavaScript. Oh, and it degradates gracefully.
-      </p>
-
-      <p class="status">
-        Hire me at <a href="http://webleader.pl">webleader.pl</a>
-        
-        <span class="small">
-          (unfortunately Polish only, but there's still contact form below)
-        </span>
-      </p>
-
+      <div class="info">
+        Currently there is nothing here, move on...
+      </div>
       <h3>Questions?</h3>
-      <form method="post" action="http://sognat.com/send-mail.php">
-        <div class="one-third">
-          <p>
-            You can email me at
-            <a href="mailto:grzegorz@swirski.name">grzegorz@swirski.name</a>
-            or use the box.
-          </p>
-
-          <p>Use it for good, not evil.</p>
-        </div>
-
-        <div class="two-thirds">
-          <textarea name="message" id="message"
-            placeholder="Type your name, email and message here."></textarea>
-            <input type="submit" name="send" id="send" value="Send message" />
-        </div>
-      </form>
+      <p>
+        Email me at
+        <a href="mailto:grzegorz@swirski.name">grzegorz@swirski.name</a>.
+      </p>
     </div>
 
     <div class="copyright">Copyright &copy; 2010 by Grzegorz Świrski</div>
