started working on timeline

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Grzegorz Świrski</title>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/timeline.css" />
   </head>
   <body>
     <div class="header">
@@ -20,6 +21,12 @@
     </div>
 
     <div class="article">
+      <div class="timeline">
+        <div class="life left"></div>
+        <div class="triangle"></div>
+        <div class="life right"></div>
+
+      </div>
       <div class="info">
         Currently there is nothing here, move on...
       </div>
