--- a/index.html
+++ b/index.html
@@ -3,42 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>Grzegorz Świrski</title>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
-    <link rel="stylesheet" href="stylesheets/timeline.css" />
   </head>
   <body>
-    <div class="header">
-      <h1>
-        Hello.
-        I'm <span class="who">Grzegorz Świrski</span>,
-        developer.
-      </h1>
-
-      <h2>
-        I build rock-solid <span class="what">web applications</span>.
-      </h2>
+    <div class="card">
+      <h1>Grzegorz Swirski</h1>
+      <h2>Web Developer at <a href="http://llp.pl">Lunar Logic Polska</a></h2>
+      <img src="images/photo.jpg" class="profile-photo"/>
+      <ul>
+        <li><a href="http://github.com/sognat">GitHub</a></li>
+        <li><a href="http://pl.linkedin.com/in/gswirski/">LinkedIn</a></li>
+        <li><a href="mailto:grzegorz@swirski.name">Contact</a></li>
+      </ul>
     </div>
-
-    <div class="article">
-      <div class="timeline">
-        <div class="life left"></div>
-        <div class="triangle"></div>
-        <div class="life right"></div>
-
-      </div>
-      <div class="info">
-        Currently there is nothing here, move on...
-      </div>
-      <h3>Questions?</h3>
-      <p>
-        Email me at
-        <a href="mailto:grzegorz@swirski.name">grzegorz@swirski.name</a>.
-      </p>
-    </div>
-
-    <div class="copyright">Copyright &copy; 2010 by Grzegorz Świrski</div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/script.js"></script>
   </body>
 </html>
