Update GitHub link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h2>Web Developer at <a href="http://llp.pl">Lunar Logic Polska</a></h2>
       <img src="images/photo.jpg" class="profile-photo"/>
       <ul>
-        <li><a href="http://github.com/sognat">GitHub</a></li>
+        <li><a href="http://github.com/gswirski">GitHub</a></li>
         <li><a href="http://pl.linkedin.com/in/gswirski/">LinkedIn</a></li>
         <li><a href="mailto:grzegorz@swirski.name">Contact</a></li>
       </ul>
