--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/reset.css" />
     <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/fontello.css" />
   </head>
   <body>
     <div class="card">
-      <h1>Grzegorz Swirski</h1>
-      <h2>Web Developer at <a href="http://llp.pl">Lunar Logic Polska</a></h2>
       <img src="images/photo.jpg" class="profile-photo"/>
-      <ul>
-        <li><a href="http://github.com/gswirski">GitHub</a></li>
-        <li><a href="http://pl.linkedin.com/in/gswirski/">LinkedIn</a></li>
-        <li><a href="mailto:grzegorz@swirski.name">Contact</a></li>
-      </ul>
+      <div class="info">
+        <h1>Grzegorz Swirski</h1>
+        <h2>Web Developer at <a href="http://llp.pl">Lunar Logic Polska</a></h2>
+        <ul class="networks">
+          <li><a href="http://github.com/gswirski"><i class="icon-github"></i><span>GitHub</span></a></li>
+          <li><a href="http://pl.linkedin.com/in/gswirski/"><i class="icon-linkedin"></i><span>LinkedIn</span></a></li>
+          <li><a href="mailto:grzegorz@swirski.name"><i class="icon-mail"></i><span>Contact</span></a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
