update job title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="images/photo.jpg" class="profile-photo"/>
       <div class="info">
         <h1>Grzegorz Swirski</h1>
-        <h2>Web Developer at <a href="http://llp.pl">Lunar Logic Polska</a></h2>
+        <h2>Software Consultant</h2>
         <ul class="networks">
           <li><a href="http://github.com/gswirski"><i class="icon-github"></i><span>GitHub</span></a></li>
           <li><a href="http://pl.linkedin.com/in/gswirski/"><i class="icon-linkedin"></i><span>LinkedIn</span></a></li>
