--- a/shutter/index.html
+++ b/shutter/index.html
@@ -14,9 +14,15 @@
       <div class="info">
         <h1>Shutter</h1>
         <h2>Intervalometer for Sony A7 series cameras</h2>
-        <p>Available in App Store soon.</p>
-        <p><a href="http://swirski.name">Copyright &copy; 2019 Grzegorz Świrski</a> · <a href="privacy.html">Privacy Policy</a></p>
+        <p><a href="https://itunes.apple.com/us/app/shutter-camera-remote/id1459044148?ls=1&mt=8"><img src="images/app_store.svg" title="Download on the App Store" /></a></p>
       </div>
+      <p class="footer">
+        <a href="http://swirski.name">Copyright &copy; 2019 Grzegorz Świrski</a>
+        ·
+        <a href="mailto:shutter_support@swirski.name">Contact Support</a>
+        ·
+        <a href="privacy.html">Privacy Policy</a>
+      </p>
     </div>
   </body>
 </html>
