update to sp. z o.o.

--- a/shutter/index.html
+++ b/shutter/index.html
@@ -17,7 +17,7 @@
         <p><a href="https://itunes.apple.com/us/app/shutter-camera-remote/id1459044148?ls=1&mt=8"><img src="images/app_store.svg" title="Download on the App Store" /></a></p>
       </div>
       <p class="footer">
-        <a href="http://swirski.name">Copyright &copy; 2019 Grzegorz Świrski</a>
+        <a href="http://swirski.name">Copyright &copy; 2019 Camera Control Apps sp. z o.o.</a>
         ·
         <a href="mailto:shutter_support@swirski.name">Contact Support</a>
         ·
