--- a/shutter/privacy.html
+++ b/shutter/privacy.html
@@ -13,8 +13,8 @@
 			<div class="info privacy">
 				<p><a href="index.html">&lt; Back to Shutter</a></p>
 				<h1>Privacy Policy</h1>
-				<p>Grzegorz Świrski built the Shutter — Camera Remote app as a Commercial app. This SERVICE is provided by
-				Grzegorz Świrski  and is intended for use as is.  </p>
+				<p>Camera Control Apps sp. z o.o. built the Shutter — Camera Remote app as a Commercial app. This SERVICE is provided by
+				Camera Control Apps sp. z o.o. and is intended for use as is.  </p>
 				<p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
 				of Personal Information if anyone decided to use my Service.  </p>
 				<p>If you choose to use my Service, then you agree to the collection and use of information in
