add contact details

--- a/shutter/index.html
+++ b/shutter/index.html
@@ -22,6 +22,8 @@
         <a href="mailto:shutter_support@swirski.name">Contact Support</a>
         ·
         <a href="privacy.html">Privacy Policy</a>
+        <br />
+        os. Na Wzgórzach 4/9; 31-721 Kraków, Poland · NIP: 6783181942
       </p>
     </div>
   </body>
