page style, grammar

--- a/camera-update/index.html
+++ b/camera-update/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <title>Update Sony Smart Remote Control</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://newcss.net/new.min.css">
   </head>
   <body id="content">
-    <h1>How to update Sony's Smart Remote Control</h1>
+    <header>
+      <h2>How to update Sony's Smart Remote Control</h2>
+    </header>
     <p class="intro">
-    Some Sony cameras require an update to allow for exposure and focus controls. This document
-    describes the easiest and most reliable way to update the camera software
-    and unlock all Shutter features.</p>
-    <p>You'll need around 20 min, your camera charged to at least 60%, and a Wi-Fi network.</p>
+    Some Sony cameras require a software update to allow for exposure and focus controls. This document
+    describes the easiest and most reliable way to update camera software. It
+    unlocks all Shutter features.</p>
+    <blockquote>
+      <p>You'll need around 20 min, your camera charged to at least 60%, and a Wi-Fi network.</p>
+    </blockquote>
 
-    <h2>Step 1. Create an account with Sony</h2>
+    <h3>Step 1. Create an account with Sony</h3>
     <p>We recommend doing this step at a computer, tablet or smartphone.
-    You could do it in camera but it's much faster this way.</p>
+    You could do it in camera but having a real keyboard helps a lot.</p>
 
     <p>To start, create an account with
     <a href=" http://account.sonyentertainmentnetwork.com/">Sony Entertainment Network</a>.
@@ -30,14 +34,14 @@
         <strong>Skip 2 factor authentication and phone number verification.</strong></li>
     </ol>
 
-    <h2>Step 2. Update Smart Remote Control</h2>
+    <h3>Step 2. Update Smart Remote Control</h3>
     <p>Once your account is created and activated, you may proceed to
     the update process. Make sure your camera is well charged (at least
-    60%) and your Sony account has disabled 2 factor authentication.</p>
+    60%) and your Sony account has 2 factor authentication disabled.</p>
 
     <ol>
-      <li>Make sure your camera time and region are correct. Otherwise you won't be able to connect to Sony website. To set time in camera:
-        "Menu" &rarr; toolbox icon (the last one) &rarr; find area and time &rarr; set accordingly</li>
+      <li>Make sure your camera's time and region are correct. Otherwise you won't be able to connect to Sony website. To set time in camera:
+        "Menu" &rarr; toolbox icon (the last one) &rarr; Area and time &rarr; set accordingly</li>
       <li>Go back to the main menu &rarr; 4th tab with little squares &rarr; "Application List"</li>
       <li>Select "PlayMemories Camera Apps"</li>
       <li>
@@ -58,10 +62,11 @@
       <li>Start the update process. It should last about 5 minutes.</li>
     </ol>
 
-    <h2>Getting help</h2>
+    <h3>Getting help</h3>
     <p>If you have any problems along the way or after the update, don't hesitate to contact us at 
     <a href="mailto:shutter_support@swirski.name">shutter_support@swirski.name</a>.</p>
 
+    <hr>
     <p class="note">Copyright &copy; 2020 Camera Control Apps sp. z o.o.</p>
   </body>
 </html>
