--- a/camera-update/index.html
+++ b/camera-update/index.html
@@ -56,7 +56,7 @@
       <li>Once connected to the Wi-Fi network, you should see the "PlayMemories Camera Apps" website with "Smart Remote Control" and "Update" buttons.
         Click on the "Update".</li>
       <li>Click "Update" again</li>
-      <li>You should be presented with a qustion: "You must have a Sony account. Do you have one?". Choose "Yes".</li>
+      <li>You should be presented with a question: "You must have a Sony account. Do you have one?". Choose "Yes".</li>
       <li>Enter the login and password that you've created earlier.</li>
       <li>Click "Agree and continue".</li>
       <li>Start the update process. It should last about 5 minutes.</li>
