--- a/camera-update/index.html
+++ b/camera-update/index.html
@@ -59,7 +59,7 @@
       <li>You should be presented with a question: "You must have a Sony account. Do you have one?". Choose "Yes".</li>
       <li>Enter the login and password that you've created earlier.</li>
       <li>Click "Agree and continue".</li>
-      <li>Start the update process. It should last about 5 minutes.</li>
+      <li>Start the update process. It should take about 5 minutes.</li>
     </ol>
 
     <h3>Getting help</h3>
