--- a/camera-update/index.html
+++ b/camera-update/index.html
@@ -10,14 +10,32 @@
       <h2>How to update Sony's Smart Remote Control</h2>
     </header>
     <p class="intro">
-    Some Sony cameras require a software update to allow for exposure and focus controls. This document
-    describes the easiest and most reliable way to update camera software. It
-    unlocks all Shutter features.</p>
+    Some Sony cameras require a software update to allow for exposure and focus controls.
+    This document will walk you through the update process to unlock all Shutter features.
+    </p>
+
+    <p>
+      You'll need around 20 min, your camera charged to at least 60%, and access to Wi-Fi.
+      We recommend following this guide at a computer. To open this page, simply type this
+      address in your web browser:</p>
+
     <blockquote>
-      <p>You'll need around 20 min, your camera charged to at least 60%, and a Wi-Fi network.</p>
+      <h3 style="text-align: center; padding: 0;"><span style="opacity: 0.4; font-weight: normal">https://</span>shutter.dev/update</h3>
     </blockquote>
 
-    <h3>Step 1. Create an account with Sony</h3>
+    <h2>Option A. Easier, but requires a computer</h2>
+    <ul>
+      <li><a href="https://www.playmemoriescameraapps.com/portal/usbdetail.php?eid=IS9104-NPIA09014_00-F00002">Navigate to Sony's PlayMemories website.</a></li>
+      <li>Click the "Install" button on the left.</li>
+      <li>Follow the instructions provided by Sony.</li>
+    </ul>
+
+    <h2>Option B. Update mostly in camera</h2>
+
+    <p>If for some reason you cannot complete "Option A", you can still update "Smart Remote Control"
+      using Wi-Fi in your camera. The process takes a little longer but sometimes it's the only option.</p>
+
+    <h4>Step 1. Create an account with Sony</h4>
     <p>We recommend doing this step at a computer, tablet or smartphone.
     You could do it in camera but having a real keyboard helps a lot.</p>
 
@@ -34,7 +52,7 @@
         <strong>Skip 2 factor authentication and phone number verification.</strong></li>
     </ol>
 
-    <h3>Step 2. Update Smart Remote Control</h3>
+    <h4>Step 2. Update Smart Remote Control</h4>
     <p>Once your account is created and activated, you may proceed to
     the update process. Make sure your camera is well charged (at least
     60%) and your Sony account has 2 factor authentication disabled.</p>
@@ -64,7 +82,7 @@
 
     <h3>Getting help</h3>
     <p>If you have any problems along the way or after the update, don't hesitate to contact us at 
-    <a href="mailto:shutter_support@swirski.name">shutter_support@swirski.name</a>.</p>
+    <a href="mailto:help@shutter.dev">help@shutter.dev</a>.</p>
 
     <hr>
     <p class="note">Copyright &copy; 2020 Camera Control Apps sp. z o.o.</p>
